# drug-evidence-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  tsconfig.json
.agents/skills/drug-evidence-research/: SKILL.md
.agents/skills/drug-evidence-research/agents/: openai.yaml
.agents/skills/drug-evidence-research/references/: data-schema.md  document_retrieval.md  parallel_retrieval.md  report-template.md  search-playbook.md  sop.md
.agents/skills/drug-evidence-research/scripts/drug_doc_links/: __init__.py  __main__.py
.agents/skills/ffmpeg/: SKILL.md
.github/workflows/: docker-image.yml
public/: app.js  index.html  skill-editor.html  skill-editor.js  styles.css  theme.js
src/: agent-runner.ts  app.test.ts  app.ts  config.ts  db.ts  id.ts  main.ts  task-store.test.ts  task-store.ts  test-helpers.test.ts  time.ts  types.ts  worker-pool.test.ts  worker-pool.ts  worker-process.test.ts  worker-process.ts  worker.test.ts  worker.ts
src/types/: better-sqlite3.d.ts
src/util/: env.ts
